adaptive contacts page

--- a/app/apparel.html
+++ b/app/apparel.html
@@ -267,7 +267,7 @@
                                 <div class="app__inner-products">
                                     <div class="product__item">
                                         <div class="product__item-category new"><span>new</span></div>
-                                        <div class="product__item-descr">
+                                        <a href="#" class="product__item-descr">
                                             <div class="product__item-img" style="background-image: url(img/apparel/app.jpg);">
                                             </div>
                                             <div class="product__item-info">
@@ -282,14 +282,14 @@
                                                     <div class="old-price">€.1,270</div>
                                                 </div>
                                                 <div class="product__item-link">
-                                                    <a href="#">more details</a>
+                                                    <a href="more.html">more details</a>
                                                 </div>
                                             </div>
-                                        </div>
+                                        </a>
                                     </div>
                                     <div class="product__item">
                                         <div class="product__item-category new"><span>new</span></div>
-                                        <div class="product__item-descr">
+                                        <a href="#" class="product__item-descr">
                                             <div class="product__item-img" style="background-image: url(img/apparel/app.jpg);">
                                             </div>
                                             <div class="product__item-info">
@@ -304,14 +304,14 @@
                                                     <div class="old-price">€.1,270</div>
                                                 </div>
                                                 <div class="product__item-link">
-                                                    <a href="#">more details</a>
+                                                    <a href="more.html">more details</a>
                                                 </div>
                                             </div>
-                                        </div>
+                                        </a>
                                     </div>
                                     <div class="product__item">
                                         <div class="product__item-category"><span>new</span></div>
-                                        <div class="product__item-descr">
+                                        <a href="#" class="product__item-descr">
                                             <div class="product__item-img" style="background-image: url(img/apparel/app.jpg);">
                                             </div>
                                             <div class="product__item-info">
@@ -326,14 +326,14 @@
                                                     <div class="old-price">€.1,270</div>
                                                 </div>
                                                 <div class="product__item-link">
-                                                    <a href="#">more details</a>
+                                                    <a href="more.html">more details</a>
                                                 </div>
                                             </div>
-                                        </div>
+                                        </a>
                                     </div>
                                     <div class="product__item">
                                         <div class="product__item-category hot"><span>hot</span></div>
-                                        <div class="product__item-descr">
+                                        <a href="#" class="product__item-descr">
                                             <div class="product__item-img" style="background-image: url(img/apparel/app.jpg);">
                                             </div>
                                             <div class="product__item-info">
@@ -348,14 +348,14 @@
                                                     <div class="old-price hot-price">€.1,270</div>
                                                 </div>
                                                 <div class="product__item-link">
-                                                    <a href="#">more details</a>
+                                                    <a href="more.html">more details</a>
                                                 </div>
                                             </div>
-                                        </div>
+                                        </a>
                                     </div>
                                     <div class="product__item">
                                         <div class="product__item-category new"><span>new</span></div>
-                                        <div class="product__item-descr">
+                                        <a href="#" class="product__item-descr">
                                             <div class="product__item-img" style="background-image: url(img/apparel/app.jpg);">
                                             </div>
                                             <div class="product__item-info">
@@ -370,14 +370,14 @@
                                                     <div class="old-price">€.1,270</div>
                                                 </div>
                                                 <div class="product__item-link">
-                                                    <a href="#">more details</a>
+                                                    <a href="more.html">more details</a>
                                                 </div>
                                             </div>
-                                        </div>
+                                        </a>
                                     </div>
                                     <div class="product__item">
                                         <div class="product__item-category new"><span>new</span></div>
-                                        <div class="product__item-descr">
+                                        <a href="#" class="product__item-descr">
                                             <div class="product__item-img" style="background-image: url(img/apparel/app.jpg);">
                                             </div>
                                             <div class="product__item-info">
@@ -392,14 +392,14 @@
                                                     <div class="old-price">€.1,270</div>
                                                 </div>
                                                 <div class="product__item-link">
-                                                    <a href="#">more details</a>
+                                                    <a href="more.html">more details</a>
                                                 </div>
                                             </div>
-                                        </div>
+                                        </a>
                                     </div>
                                     <div class="product__item">
                                         <div class="product__item-category"><span>new</span></div>
-                                        <div class="product__item-descr">
+                                        <a href="#" class="product__item-descr">
                                             <div class="product__item-img" style="background-image: url(img/apparel/app.jpg);">
                                             </div>
                                             <div class="product__item-info">
@@ -414,14 +414,14 @@
                                                     <div class="old-price">€.1,270</div>
                                                 </div>
                                                 <div class="product__item-link">
-                                                    <a href="#">more details</a>
+                                                    <a href="more.html">more details</a>
                                                 </div>
                                             </div>
-                                        </div>
+                                        </a>
                                     </div>
                                     <div class="product__item">
                                         <div class="product__item-category"><span>new</span></div>
-                                        <div class="product__item-descr">
+                                        <a href="#" class="product__item-descr">
                                             <div class="product__item-img" style="background-image: url(img/apparel/app.jpg);">
                                             </div>
                                             <div class="product__item-info">
@@ -436,14 +436,14 @@
                                                     <div class="old-price">€.1,270</div>
                                                 </div>
                                                 <div class="product__item-link">
-                                                    <a href="#">more details</a>
+                                                    <a href="more.html">more details</a>
                                                 </div>
                                             </div>
-                                        </div>
+                                        </a>
                                     </div>
                                     <div class="product__item">
                                         <div class="product__item-category hot"><span>hot</span></div>
-                                        <div class="product__item-descr">
+                                        <a href="#" class="product__item-descr">
                                             <div class="product__item-img" style="background-image: url(img/apparel/app.jpg);">
                                             </div>
                                             <div class="product__item-info">
@@ -458,14 +458,14 @@
                                                     <div class="old-price hot-price">€.1,270</div>
                                                 </div>
                                                 <div class="product__item-link">
-                                                    <a href="#">more details</a>
+                                                    <a href="more.html">more details</a>
                                                 </div>
                                             </div>
-                                        </div>
+                                        </a>
                                     </div>
                                     <div class="product__item">
                                         <div class="product__item-category new"><span>new</span></div>
-                                        <div class="product__item-descr">
+                                        <a href="#" class="product__item-descr">
                                             <div class="product__item-img" style="background-image: url(img/apparel/app.jpg);">
                                             </div>
                                             <div class="product__item-info">
@@ -480,14 +480,14 @@
                                                     <div class="old-price">€.1,270</div>
                                                 </div>
                                                 <div class="product__item-link">
-                                                    <a href="#">more details</a>
+                                                    <a href="more.html">more details</a>
                                                 </div>
                                             </div>
-                                        </div>
+                                        </a>
                                     </div>
                                     <div class="product__item">
                                         <div class="product__item-category new"><span>new</span></div>
-                                        <div class="product__item-descr">
+                                        <a href="#" class="product__item-descr">
                                             <div class="product__item-img" style="background-image: url(img/apparel/app.jpg);">
                                             </div>
                                             <div class="product__item-info">
@@ -502,14 +502,14 @@
                                                     <div class="old-price">€.1,270</div>
                                                 </div>
                                                 <div class="product__item-link">
-                                                    <a href="#">more details</a>
+                                                    <a href="more.html">more details</a>
                                                 </div>
                                             </div>
-                                        </div>
+                                        </a>
                                     </div>
                                     <div class="product__item">
                                         <div class="product__item-category hot"><span>hot</span></div>
-                                        <div class="product__item-descr">
+                                        <a href="#" class="product__item-descr">
                                             <div class="product__item-img" style="background-image: url(img/apparel/app.jpg);">
                                             </div>
                                             <div class="product__item-info">
@@ -524,14 +524,14 @@
                                                     <div class="old-price hot-price">€.1,270</div>
                                                 </div>
                                                 <div class="product__item-link">
-                                                    <a href="#">more details</a>
+                                                    <a href="more.html">more details</a>
                                                 </div>
                                             </div>
-                                        </div>
+                                        </a>
                                     </div>
                                     <div class="product__item">
                                         <div class="product__item-category"><span>new</span></div>
-                                        <div class="product__item-descr">
+                                        <a href="#" class="product__item-descr">
                                             <div class="product__item-img" style="background-image: url(img/apparel/app.jpg);">
                                             </div>
                                             <div class="product__item-info">
@@ -546,14 +546,14 @@
                                                     <div class="old-price">€.1,270</div>
                                                 </div>
                                                 <div class="product__item-link">
-                                                    <a href="#">more details</a>
+                                                    <a href="more.html">more details</a>
                                                 </div>
                                             </div>
-                                        </div>
+                                        </a>
                                     </div>
                                     <div class="product__item">
                                         <div class="product__item-category new"><span>new</span></div>
-                                        <div class="product__item-descr">
+                                        <a href="#" class="product__item-descr">
                                             <div class="product__item-img" style="background-image: url(img/apparel/app.jpg);">
                                             </div>
                                             <div class="product__item-info">
@@ -568,14 +568,14 @@
                                                     <div class="old-price">€.1,270</div>
                                                 </div>
                                                 <div class="product__item-link">
-                                                    <a href="#">more details</a>
+                                                    <a href="more.html">more details</a>
                                                 </div>
                                             </div>
-                                        </div>
+                                        </a>
                                     </div>
                                     <div class="product__item">
                                         <div class="product__item-category hot"><span>hot</span></div>
-                                        <div class="product__item-descr">
+                                        <a href="#" class="product__item-descr">
                                             <div class="product__item-img" style="background-image: url(img/apparel/app.jpg);">
                                             </div>
                                             <div class="product__item-info">
@@ -590,10 +590,10 @@
                                                     <div class="old-price hot-price">€.1,270</div>
                                                 </div>
                                                 <div class="product__item-link">
-                                                    <a href="#">more details</a>
+                                                    <a href="more.html">more details</a>
                                                 </div>
                                             </div>
-                                        </div>
+                                        </a>
                                     </div>
                                 </div>
                                 <div class="app__inner-control control_bottom">
