--- a/app/contacts.html
+++ b/app/contacts.html
@@ -24,7 +24,7 @@
 
         <div class="content">
             <header class="header apparel">
-                <div class="header__inner" style="background-image: url(img/contacts/map.jpg);">
+                <div class="header__inner contacts__inner" style="background-image: url(img/contacts/map.jpg);">
                     <div class="container">
                         <div class="header__inner-info">
                             <div class="header__inner-box">
@@ -47,12 +47,17 @@
                     </div>
                 </div>
             </header>
-            <section class="product app contacts">
+            <section class="product contacts">
                 <div class="product__inner">
                     <div class="container">
                         <div class="product__inner-content">
                             <aside class="aside">
                                 <div class="aside__menu">
+                                    <div class="aside__menu-burger">
+                                        <span></span>
+                                        <span></span>
+                                        <span></span>
+                                    </div>
                                     <div class="aside__menu-title">Menu</div>
                                     <ul class="aside__menu-list options__menu-list">
                                         <li>
@@ -90,7 +95,7 @@
                                         </li>
                                     </ul>
                                 </div>
-                                <div class="header__inner-poster">
+                                <div class="header__inner-poster" style="background-image: url(/img/header/bg.jpg);">
                                     <div class="poster-box">
                                         <div class="poster-box__title">Now is open!</div>
                                     </div>
@@ -164,7 +169,7 @@
                     <div class="container">
                         <div class="footer__inner-content">
                             <div class="footer__inner-item item-category">
-                                <div class="footer__inner-title">Category</div>
+                                <div class="footer__inner-title title-category">Category</div>
                                 <ul class="footer__inner-list">
                                     <li><a href="#">Home</a></li>
                                     <li><a href="#">about us</a></li>
@@ -176,7 +181,7 @@
                                 </ul>
                             </div>
                             <div class="footer__inner-item item-category">
-                                <div class="footer__inner-title">Our Account</div>
+                                <div class="footer__inner-title title-category">Our Account</div>
                                 <ul class="footer__inner-list">
                                     <li><a href="#">Your Account</a></li>
                                     <li><a href="#">Personal information</a></li>
@@ -188,7 +193,7 @@
                                 </ul>
                             </div>
                             <div class="footer__inner-item item-category">
-                                <div class="footer__inner-title">Our Support</div>
+                                <div class="footer__inner-title title-category">Our Support</div>
                                 <ul class="footer__inner-list">
                                     <li><a href="#">Site Map</a></li>
                                     <li><a href="#">Search Terms</a></li>
