add adaptive for shop page

--- a/app/contacts.html
+++ b/app/contacts.html
@@ -101,7 +101,7 @@
                                     </div>
                                 </div>
                             </aside>
-                            <div class="product__inner-box app__inner-box contacts__inner-box">
+                            <div class="product__inner-box contacts__inner-box">
                                 <div class="app__inner-navigation">
                                     <ul class="app__inner-breadcrumb">
                                         <li><a href="#">Home</a></li>
